# myproject

src/: CMakeLists.txt
src/OakDTools/: .CottonDetectPragati2.py.swp  ArucoDetectYanthra.py  ArucoDetectYanthra.py.save  ArucoDetectYanthra10May2022.py  ArucoDetectYanthra12May2022.py  ArucoDetectYanthra_pragati3.py  CottonDetect-WithOutputFiles.py  CottonDetect-WithOutputFiles24APR.py  CottonDetect-WithOutputFiles30APR2022.py  CottonDetect.py  CottonDetectInteractive.py  CottonDetectInteractiveWithDebugLogs.py  CottonDetectPragati2.py  CottonDetectTemp.py  CottonDetect_6Apr2023.py  CottonDetect_Jan212023.py  CottonDetect_Jan272023.py  CottonDetect_WorkingCode_6Apr2023.py  OakDLiteCaptureGenerate.py  OakDLiteCaptureGenerateWithVisualiser.py  OpenCvTest.py  Yanthra  YanthraMoveCommunicationInterface.c  aicol.py  aruco.py.save  aruco_detect.py  aruco_detect.py.save  cam_ex_in.py  camout  centroid.txt  col.py  col_aru.py  oakd_extrinsics.npz  opencam.py  origin.py  points100.pcd  projector_device.py  projector_deviceWithOutVisualiser.py  setcamparameters.py  test1.py  (+4 more)
src/VehicleControl/: .VehicleCanBusInterface_2jun2023.py.swp  .VehicleControl_27JUN.py.swp  BASIC_CAN_ODRIVES_TEST.py  DynamicSteeringWithIMU.py  GPIO.py  IMUReadExperiment.py  JoyStickControlWithAdaFruitDriver.py  OdriveCanBusHelperFunctions.py  PragatiConfig.py  README  ReadAnalogEncoder.py  SemiAutonomousControlWithIMUandUSBInterface.py  SimpleCanInterface.py  TestADCMCP3008.py  TestJoytStick.py  TestVehicleOdriveMotors.py  VehicleCanBusInterface.py  VehicleCanBusInterface8jun2023.py  VehicleCanBusInterface_3jul2023.py  VehicleControl.py  VehicleControl.py.save  VehicleControl.py.save.1  VehicleControl10JUN.py  VehicleControl8jun2023.py  VehicleControl_27JUN.py  VehicleControl_3jul2023.py  VehicleDefinitions.py  canlib.py  import_serial.py  serialtest.py  simpletest.py  test_canbus_disconnects.py  ubuntu@192.168.236.240
src/VehicleControl/Adafruit_GPIO/: GPIO.py
src/VehicleControl/IMU/: IMUReadExperiment.py
src/odrive_configuration/: Odrv_Config.tar.xz
src/odrive_configuration/Odrv_Config/: default_config_link35_dec10_2019.json  default_config_link4_dec10_2019.json  tuned_link35_odrv_dec10_2019.json  tuned_link4_odrv_dec10_2019.json
src/odrive_control/: CMakeLists.txt  make.sh  package.xml
src/odrive_control/archive/: hardware_serial_interface.h  odrive_canbus_interface.h  odrive_hw_interface.cpp  odrive_hw_interface.h  odrive_hw_interface_copy.cpp  odrive_serial_interface.h
src/odrive_control/config/: encoder_offset_values.txt  joint_homing_values.txt  odrive_controllers.yaml
src/odrive_control/launch/: odrive_controllers-19FEB2023.launch  odrive_controllers.launch  odrive_controllers.launch-20JAN2023  odrive_controllersWithOutRosControllers.launch  odrive_controllersWithRosControllers.launch  robot_state_publisher.launch
src/odrive_control/src/: debug_print.cpp  generic_hw_control_loop.cpp  generic_hw_interface.cpp  generic_hw_interface_01.cpp  main.cpp  misc_functions.cpp  odrive_can_functions.cpp  odrive_control.cpp  odrive_hw_interface.cpp  odrive_hw_interface_mr.cpp  odrive_tests.cpp  task.cpp
src/odrive_control/srv/: joint_homing.srv
src/pattern_finder/: CMakeLists.txt  package.xml
src/pattern_finder/src/: aruco_finder.cpp  aruco_finder_backup.cpp
src/robo_description/: CMakeLists.txt  package.xml
src/robo_description/calibration_files/: calibrated_2019_12_18_20_26_31.urdf  calibration_2019_12_18_20_26_31.yaml  depth_2019_12_18_20_26_31.yaml
src/robo_description/launch/: ArucoMarkerTest.launch  aruco.launch  calibrate.launch  display.launch  main.launch  test140.launch
src/robo_description/meshes/: base_link.STL  camera_link.STL  ee_link.STL  link2.STL  link5.STL  link7.STL
src/robo_description/meshes_final/: base_link.STL  link5.STL  link7.STL  link9.STL
src/robo_description/urdf/: URDF  URDF_REP103_EYEINHAND_MASTERCOPY_WITH_CAMINL3.urdf  URDF_REP103_EYEINHAND_MASTERCOPY_WITH_CAMINL4.urdf  URDF_REP103_EYETOHAND_MASTERCOPY_PLATE_L45.urdf  URDF_REP103_EYETOHAND_MASTERCOPY_PLATE_L55_BOTTOM_1MM.urdf  URDF_REP103_EYETOHAND_MASTERCOPY_PLATE_L55_BOTTOM_1MM_RGB.urdf  URDF_REP103_EYETOHAND_MASTERCOPY_PLATE_L55_TOP_1MM.urdf  URDF_REP103_EYETOHAND_MASTERCOPY_SHORTPLATE.urdf  URDF_REP103_EYETOHAND_pragati11_L55_B_calibrated_06.urdf  URDF_REP103_EYETOHAND_pragati11_calibrated_01.urdf  URDF_REP103_EYETOHAND_pragati11_calibrated_02.urdf  URDF_REP103_EYETOHAND_pragati11_calibrated_03.urdf  URDF_REP103_EYETOHAND_pragati11_calibrated_04.urdf  URDF_REP103_EYETOHAND_pragati11_calibrated_05.urdf  URDF_REP103_EYETOHAND_pragati12_L55_B_calibration_03.urdf  URDF_REP103_EYETOHAND_pragati12_calibrated_01.urdf  URDF_REP103_EYETOHAND_pragati12_calibrated_02.urdf  URDF_REP103_EYETOHAND_pragati4_L55_B_calibrated_04.urdf  (+9 more)
src/yanthra_move/: CMakeLists.txt  package.xml  yanthra_move_NormalPicking.yaml  yanthra_move_picking.yaml
(+64 files in other folders)
